# AI-Hiring-Intelligence

./: GITHUB_SETUP.md  LICENSE  README.md  environment.yml  github_push.sh  pyproject.toml  requirements.txt  submission_metadata.yaml
docs/: Architecture.md  Explainability.md  FeatureEngineering.md  Methodology.md
src/: credibility_engine.py  explainability.py  feature_engineering.py  preprocessing.py  ranking_engine.py  utils.py
submission/: run_submission.py  submission.csv
